terraform-manifests/c4-firewallrules.tf
resource "google_compute_firewall" "fw_ssh" {
  name = "fwrule-allow-ssh22"
  allow {
    ports = ["22"]
    protocol = "tcp"
  }
  direction = "ingress"
  network = google_compute_network.myvpc.id
  source_ranges = ["0.0.0.0/0"]
  target_tags = ["ssh-tag"]
}

resource "google_compute_firewall" "fw_http" {
  name = "fwrule-allow-http80"
  allow {
    ports = ["80"]
    protocol = "tcp"
  }
  direction = "ingress"
  network = google_compute_network.myvpc.id
  source_ranges = ["0.0.0.0/0"]
  target_tags = ["webserver-tag"]
}
